fix: move toggle bar to the right, move document range to center bottom, make button flicker when it is ready

--- a/front/Contest_07_08.css
+++ b/front/Contest_07_08.css
@@ -35,7 +35,20 @@ header {
 }
 #btn-end-vote:enabled {
   cursor: pointer; /* Курсор при наведении */
+  animation: flicker 1.5s infinite ease-in-out;
 }
+@keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 /* #btn-end-vote:enabled:hover {
   opacity: 0.85;
 } */
@@ -168,14 +181,6 @@ header {
   padding: 1rem;
   background-color: #fafafa;
 }
-#right-sidebar {
-  height: calc(100% - 80px);
-  position: fixed;
-  width: 30vh;
-  min-width: 300px;
-  right: 0;
-  top: 80px;
-}
 
 .participant-wrapper {
   width: 100%;
@@ -184,7 +189,7 @@ header {
 .participant-info-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 10px;
   width: 100%;
 }
@@ -194,10 +199,8 @@ header {
 }
 
 .participant-name,
-.participant-position,
-.participant-tb,
-.participant-department {
-  text-align: start;
+.participant-information {
+  text-align: center;
 }
 
 .img-resize {
@@ -269,21 +272,29 @@ header {
   position: relative;
   align-items: center;
   width: 40vh;
-  min-width: 400px;
   height: 100%;
   opacity: 1;
   transition: opacity 0.3s ease;
 }
 
-.content-left-toggle {
+.content-right {
+  height: calc(100% - 80px);
+  position: fixed;
+  width: 30vh;
+  right: 0;
+  top: 80px;
+}
+
+.content-right-toggle {
   width: 25px;
   height: 100%;
   border: none;
   display: flex;
   align-items: center;
+  z-index: 100;
 }
 
-.content-left-triangle-left {
+.content-right-triangle-left {
   width: 0;
   height: 0;
   border-top: 15px solid transparent;
@@ -291,7 +302,7 @@ header {
   border-right: 15px solid black;
 }
 
-.content-left-triangle-right {
+.content-right-triangle-right {
   width: 0;
   height: 0;
   border-top: 15px solid transparent;
@@ -299,7 +310,7 @@ header {
   border-left: 15px solid black;
 }
 
-.content-left-invisible {
+.content-right-invisible {
   width: 0px;
   max-width: 0px;
   min-width: 0px;
@@ -309,15 +320,22 @@ header {
 
 .content-center {
   width: calc(100% - 70vh - 25px);
-  height: 100%;
+  height: 90%;
   overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .content-center-extended {
   width: calc(100% - 30vh - 25px);
+}
+
+.document-range {
+  position: fixed;
+  bottom: 10px;
+  align-self: center;
 }
 
 .total-essays {
